# notebooks

./: .gitignore  20240609 The dice game.ipynb  README.md  pyproject.toml  requirements.txt
