[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Charles Baynham <charles.baynham@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
poetry = "^1.8.3"
matplotlib = "^3.9.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
jupyterlab = "^4.2.1"
jupyterlab-git = "^0.50.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
